# sVanillaPluginCommon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-win.yml
Aria2Net/: CMakeLists.txt
Aria2Net/AriaClient/: AriaApi.h  AriaClient.cpp  AriaClient.h
Download/: AbstractDownloader.cpp  AbstractDownloader.h  AriaDownloader.cpp  AriaDownloader.h  CMakeLists.txt  DownloadLog.h  FileDownloader.h
FFmpeg/: CMakeLists.txt  FFmpegConfig.h  FFmpegHelper.cpp  FFmpegHelper.h  process.hpp  process_unix.cpp
NetWork/: CMakeLists.txt  CNetWork.cpp  CNetWork.h  CNetWork.inl  LocationUrlResponseWrapper.h
NetWork/CurlCpp/: CurlCookie.cpp  CurlCookie.h  CurlCookieJar.cpp  CurlCookieJar.h  CurlCookieOpt.cpp  CurlCookieOpt.h  CurlCookies.cpp  CurlCookies.h  CurlEasy.cpp  CurlEasy.inl  CurlGlobal.cpp  CurlGlobal.h  CurlHeader.cpp  CurlHeader.h  CurlOption.h  CurlOption.inl  CurlType.h
PluginCommon/: BaseVideoView.cpp  BaseVideoView.h  CMakeLists.txt  ILogin.cpp  ILogin.h  IPlugin.h  LoggerRegisterHelpper.cpp  LoggerRegisterHelpper.h  Login.h  LoginApi.h  LoginProxy.cpp  LoginProxy.h  LoginWeb.h  PluginConfig.h  TemplatePluginCall.h
PluginCrypto/: CMakeLists.txt  Crc32.cpp  Crc32.h  Crypto.cpp  Crypto.h  Encoding.cpp  Encoding.h
Util/: CMakeLists.txt  JsonProcess.cpp  JsonProcess.h  LocaleHelper.cpp  LocaleHelper.h  MutexUtil.h  UrlProccess.cpp  UrlProccess.h  process.cpp  process.hpp  process_win.cpp
include/: BaseVideoView.h  IPlugin.h
include/download/: CMakeLists.txt
scripts/: clang_format_all.py
